--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						</div>
 						Логотип <a href="">Новой Тывы</a>
 					</div>
-					<p><strong>Новая Тыва</strong> (<a href="https://ru.wikipedia.org/wiki/%D0%A2%D1%83%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D1%8F%D0%B7%D1%8B%D0%BA">тув. </a>𐰲𐰀𐰀 :𐱃𐰃𐰋𐰀, «новая Тыва»), общественно-политическое движение Республики Тыва и <a>Таңды-Тыва</a>. Возникнув как антивоенное сообщество, со временем преобразовалось в национально-освободительное и деколониальное движение. В годы <a>Антироссийского восстания</a> (2025-2029) участвовало в вооруженном противостоянии карательным отрядам <a>Руси Святой</a>.
+					<p><strong>Новая Тыва</strong> (<a href="https://ru.wikipedia.org/wiki/%D0%A2%D1%83%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D1%8F%D0%B7%D1%8B%D0%BA">тув. </a>𐰲𐰀𐰀 :𐱃𐰃𐰋𐰀, «новая Тыва»), общественно-политическое движение Республики Тыва и <a>Таңды-Тыва</a>. Возникнув как антивоенное сообщество, со временем преобразовалось в национально-освободительное и деколониальное движение. В годы <a href="rebel.html">Антироссийского восстания</a> (2025-2029) участвовало в вооруженном противостоянии карательным отрядам <a href="saint_rus.html">Руси Святой</a>.
 					<div class="contentsPanel">
 						<div class="contentsHeader">Contents</div>
 						<ul>
