--- a/saint_rus.html
+++ b/saint_rus.html
@@ -77,7 +77,7 @@
 						<div class="articleRightInner">
 							<img src="https://gdb.rferl.org/588039FE-9931-48A0-8C14-D1CFEAD128F0_w408_r1_s.jpg" />
 						</div>
-						Ежедневная «Церемония народного единения» в Руси Святой
+						Ежедневная «Церемония Единения Нации» в Руси Святой
 					</div>
 					<p><strong>Русь Святая</strong> государственное образование, возникшее после распада Российской Федерации на территории центральной России и некоторых её регионов.				
 					<div class="lavenderBox">
