--- a/tannu-tuva.html
+++ b/tannu-tuva.html
@@ -46,21 +46,21 @@
 				
 				</div>
 				<div class="article">
-					<h1>Русь Святая</h1>
+					<h1>Таңды-Тыва</h1>
 					<p class="siteSub">Материал из Википедии — свободной энциклопедии</p>
-					<p class="roleNote">Это заготовка статьи о государственном образовании</a>.</p>
+					<p class="roleNote">Это заготовка статьи о государстве</a>.</p>
 
 					<div style="max-width: 30%;;" class="articleRight">
 						<div class="articleRightInner">
-							<img src="https://gdb.rferl.org/588039FE-9931-48A0-8C14-D1CFEAD128F0_w408_r1_s.jpg" />
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Flag_of_Tannu_Tuva_%281921-1926%29.svg/1200px-Flag_of_Tannu_Tuva_%281921-1926%29.svg.png" />
 						</div>
-						Ежедневный «Ритуал Единения Нации» в Руси Святой
+						Флаг Таңды-Тывы
 					</div>
-					<p><strong>Русь Святая</strong> государственное образование, возникшее после распада Российской Федерации на территории центральной России и некоторых её регионов.				
+					<p><strong>Таңды-Тыва</strong> — государство, образовавшееся на территории Республики Тыва после провозглашения независимости Российской Федерации.				
 					<div class="lavenderBox">
-						<div class="header">Категория: Непризнанные государства</div>
+						<div class="header">Категория: Бывшие российские колонии</div>
 						<div class="linklist">
-							<a href="#">Республика Сомалиленд </a> <a href="#">	Федеративная Республика Амбазония </a> <a href="#">Республика Южная Осетия </a> <a href="#">Республика Абхазия </a> <a href="#">Приднестровская Молдавская Республика </a>
+							<a href="#">Республика Саха </a> <a href="#">	Алтай Эл </a> <a href="#">Республика Буряд-Монголия </a> <a href="#">Хакас Чир </a> <a href="#">Идель-Урал </a>
 						</div>
 						
 					</div>
