--- a/tannu-tuva.html
+++ b/tannu-tuva.html
@@ -60,7 +60,7 @@
 					<div class="lavenderBox">
 						<div class="header">Категория: Бывшие российские колонии</div>
 						<div class="linklist">
-							<a href="#">Республика Саха </a> <a href="#">	Алтай Эл </a> <a href="#">Республика Буряд-Монголия </a> <a href="#">Хакас Чир </a> <a href="#">Идель-Урал </a>
+							<a href="#">Elud-Oirad </a> <a href="#">Республика Саха </a> <a href="#">	Алтай Эл </a> <a href="#">Республика Буряд-Монголия </a> <a href="#">Хакас Чир </a> <a href="#">Идель-Урал </a>
 						</div>
 						
 					</div>
